objects/UNITY_Vendor_Community_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Notification1__c</fullName>
        <label>Display Notification1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Notification2__c</fullName>
        <label>Display_Notification2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Notification3__c</fullName>
        <label>Display_Notification3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UNITY_Vendor Community Notification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UNITY_Vendor Community Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>